# UAV_nav_via_MPPI

./: .gitignore  README.md
3DVoxelMap_ws/src/starling_local_world_model/: CMakeLists.txt  package.xml
3DVoxelMap_ws/src/starling_local_world_model/src/: local_cloud_cropper.cpp  local_obstacle_metrics.cpp
CPU_parellel_test/: benchmark_parallel.py  benchmark_serial.py  benchmark_vecorized.py
Figure8FlightTest/: Figure8FlightTest.py
HoveringTest/: hover.py
PentagramFlightTest/: PentagramFlightTest.py
SquareFlightTest/: SquareFlightTest.py
analyze_shape/: analyze_shape_bag.py
april_18_ws/: hover.py
march_31_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
march_31_ws/install/starling_hover/lib/starling_hover/: hover
march_31_ws/install/starling_hover/share/starling_hover/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
march_31_ws/install/starling_hover/share/starling_hover/hook/: pythonpath.ps1
march_31_ws/log/: latest_build
march_31_ws/src/starling_hover/: setup.cfg  setup.py
march_31_ws/src/starling_hover/starling_hover/: hover.py
temp_mppi/: figure8_mppi_node.py
